Fixed alignment of chinese Index Headers
Fixed the chinese Index Headers by setting margin-top and margin-bottom to 'playerIndexContainer h2' and 'adminIndexContainer h2'

--- a/assets/style.css
+++ b/assets/style.css
@@ -103,7 +103,8 @@ body {
 #output-playerIndexContainer h2 {
     font-family: 'Minecraftia', sans-serif;
     padding: 0;
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
     display: block;
     width: 100%;
     color: #0000aa;
@@ -122,7 +123,8 @@ body {
 #output-adminIndexContainer h2 {
     font-family: 'Minecraftia', sans-serif;
     padding: 0;
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
     display: block;
     width: 100%;
     color: #0000aa;
